# OpenSSL_101

./: CMakeLists.txt  README.md
OpenSSL_Client/: CMakeLists.txt  OpenSSL_Client.cpp  OpenSSL_Client.h
client/: CMakeLists.txt  client.cpp  client.h
server/: CMakeLists.txt  server.cpp  server.h
shared/: my.h
